--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dva Demo</title>
   <link rel="stylesheet" href="index.css" />
+  <link rel="icon" href="https://gw.alipayobjects.com/zos/rmsportal/rlpTLlbMzTNYuZGGCVYM.png" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="../src/common/index-1.css">
+  <link rel="stylesheet" type="text/css" href="../src/common/index-2.css">
 </head>
 <body>
 
